[package]
name = "grow_space"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grow_space"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

init_if_needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "1.18.12"
